--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,8 @@ ExportedObj/
 
 # Unity3D generated file on crash reports
 sysinfo.txt
+BillingMode.json
+BillingMode.json.meta
 
 # Builds
 *.apk
@@ -132,7 +134,6 @@ $RECYCLE.BIN/
 
 # 忽略日志
 /*.log
-
 
 # 忽略编译包体
 /[Bb]in/
